# presidio-pii-masking

./: .gitignore  README.md  consultaion_sample_transcription.txt  masked_custom.txt  masked_final.txt  masked_improved.txt  masked_output.txt  masked_selective.txt  masked_with_address.txt  masking_config.yaml  pyproject.toml  sample_text.txt  test_sample.py
src/presidio_pii_masking/: __init__.py  cli.py  config.py  custom_recognizers.py  masking.py
tests/: conftest.py  test_cli.py  test_complex_cases.py  test_config.py  test_masking.py  test_performance.py  test_recognizers.py
